--- a/requirements.txt
+++ b/requirements.txt
@@ -69,13 +69,13 @@ markdown-it-py==4.0.0
 markupsafe==3.0.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-ml-dtypes==0.5.3
+ml-dtypes==0.3.2
 mmh3==5.2.0
 mpmath==1.3.0
 multidict==6.7.0
 namex==0.1.0
 networkx==3.5
-numpy==2.3.3
+numpy==1.26.4
 oauthlib==3.3.1
 onnxruntime==1.23.1
 openai==1.109.1
@@ -101,7 +101,7 @@ portalocker==2.7.0
 posthog==5.4.0
 prompt-toolkit==3.0.52
 propcache==0.4.1
-protobuf==6.32.1
+protobuf==4.25.8
 ptyprocess==0.7.0
 pure-eval==0.2.3
 pyasn1==0.6.1
@@ -134,9 +134,11 @@ sniffio==1.3.1
 stack-data==0.6.3
 sympy==1.14.0
 tenacity==9.1.2
-tensorboard==2.20.0
+tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.20.0
+tensorflow==2.16.2
+tensorflow-io-gcs-filesystem==0.37.1
+tensorflow-macos==2.16.2
 termcolor==3.1.0
 tiktoken==0.12.0
 tokenizers==0.22.1
