--- a/precision_agronomist/pyproject.toml
+++ b/precision_agronomist/pyproject.toml
@@ -3,10 +3,14 @@ name = "precision_agronomist"
 version = "0.1.0"
 description = "precision_agronomist using crewAI"
 authors = [{ name = "Ayush Yajnik", email = "ayushyajnik1@outlook.com" }]
-requires-python = ">=3.10,<3.14"
+requires-python = ">=3.10"
 dependencies = [
-    "crewai[tools]>=0.203.0,<1.0.0"
+    "crewai[tools]>=0.203.0,<1.0.0",
+    "scikit-learn>=1.3,<2.0.0",
+    "pandas>=2.2.0,<3.0.0",
+    "numpy>=1.26.0,<2.0.0"
 ]
+
 
 [project.scripts]
 precision_agronomist = "precision_agronomist.main:run"
