--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+preciision_agronomist/.env
+preciision_agronomist/.venv
+preciision_agronomist/venv
+preciision_agronomist/report.md
