--- a/requirements.txt
+++ b/requirements.txt
@@ -69,11 +69,12 @@ mlflow-skinny==3.4.0
 mlflow-tracing==3.4.0
 more-itertools==10.8.0
 namex==0.1.0
-numpy==2.3.3
+numpy==2.2.6
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
 openapi-schema-validator==0.6.3
 openapi-spec-validator==0.7.2
+opencv-python==4.12.0.88
 opentelemetry-api==1.37.0
 opentelemetry-proto==1.37.0
 opentelemetry-sdk==1.37.0
