--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 absl-py==2.3.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.10.11
+aiosignal==1.4.0
 alembic==1.17.0
 annotated-types==0.7.0
 anyio==4.11.0
 astunparse==1.6.3
 attrs==25.4.0
 authlib==1.6.5
+backoff==2.2.1
 blinker==1.9.0
 cachetools==6.2.1
 certifi==2025.10.5
@@ -17,6 +21,8 @@ cryptography==45.0.7
 cycler==0.12.1
 cyclopts==3.24.0
 databricks-sdk==0.67.0
+dataclasses-json==0.6.7
+defusedxml==0.7.1
 dnspython==2.8.0
 docker==7.1.0
 docstring-parser==0.17.0
@@ -28,6 +34,7 @@ fastmcp==2.12.4
 flask==3.1.2
 flatbuffers==25.9.23
 fonttools==4.60.1
+frozenlist==1.8.0
 gast==0.6.0
 gitdb==4.0.12
 gitpython==3.1.45
@@ -45,6 +52,7 @@ httpx==0.28.1
 httpx-sse==0.4.3
 idna==3.11
 importlib-metadata==8.7.0
+inference-sdk==0.58.2
 isodate==0.7.2
 itsdangerous==2.2.0
 jinja2==3.1.6
@@ -60,6 +68,7 @@ mako==1.3.10
 markdown==3.9
 markdown-it-py==4.0.0
 markupsafe==3.0.3
+marshmallow==3.26.1
 matplotlib==3.10.7
 mcp==1.17.0
 mdurl==0.1.2
@@ -68,13 +77,15 @@ mlflow==3.4.0
 mlflow-skinny==3.4.0
 mlflow-tracing==3.4.0
 more-itertools==10.8.0
+multidict==6.7.0
+mypy-extensions==1.1.0
 namex==0.1.0
 numpy==2.2.6
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
 openapi-schema-validator==0.6.3
 openapi-spec-validator==0.7.2
-opencv-python==4.12.0.88
+opencv-python==4.10.0.84
 opentelemetry-api==1.37.0
 opentelemetry-proto==1.37.0
 opentelemetry-sdk==1.37.0
@@ -86,7 +97,9 @@ pandas==2.3.3
 parse==1.20.2
 pathable==0.4.4
 pillow==11.3.0
+propcache==0.4.1
 protobuf==6.32.1
+py-cpuinfo==9.0.0
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
@@ -119,6 +132,7 @@ sqlalchemy==2.0.44
 sqlparse==0.5.3
 sse-starlette==3.0.2
 starlette==0.48.0
+supervision==0.26.1
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
 tensorflow==2.20.0
@@ -126,7 +140,9 @@ tensorflow-macos==2.15.1
 tensorflow-metal==1.2.0
 termcolor==3.1.0
 threadpoolctl==3.6.0
+tqdm==4.67.1
 typing-extensions==4.15.0
+typing-inspect==0.9.0
 typing-inspection==0.4.2
 tzdata==2025.2
 urllib3==2.5.0
@@ -134,4 +150,5 @@ uvicorn==0.37.0
 werkzeug==3.1.1
 wheel==0.45.1
 wrapt==1.17.3
+yarl==1.22.0
 zipp==3.23.0
