--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ docker==7.1.0
 docstring-parser==0.17.0
 docutils==0.22.2
 email-validator==2.3.0
+ensure==1.0.4
 exceptiongroup==1.3.0
 fastapi==0.119.0
 fastmcp==2.12.4
@@ -110,6 +111,7 @@ pydantic-settings==2.11.0
 pygments==2.19.2
 pyparsing==3.2.5
 pyperclip==1.11.0
+python-box==7.3.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
