--- a/config_params/config.yml
+++ b/config_params/config.yml
@@ -5,4 +5,4 @@ data_validation:
     STATUS_FILE: artifacts/data_validation/data_validation_status.txt
     train_data: data/train
     test_data: data/test
-    val_data: data/val
+    val_data: data/valid
