--- a/config_params/config.yml
+++ b/config_params/config.yml
@@ -6,3 +6,14 @@ data_validation:
     train_data: data/train
     test_data: data/test
     val_data: data/valid
+
+data_transformation:
+  root_dir: artifacts/data_transformation
+  transformed_train_data: artifacts/data_transformation/train
+  transformed_test_data: artifacts/data_transformation/test
+  transformed_val_data: artifacts/data_transformation/val
+  image_size: [224, 224]  # or [299, 299] for Inception, [384, 384] for EfficientNet-B0, etc.
+  normalization_method: "imagenet"  # or "standard", "rescale", "model_specific"
+  model_name: "ResNet50"  # EfficientNetB0, MobileNetV2, etc.
+  color_mode: "rgb"
+  data_format: "channels_last"
