--- a/requirements.txt
+++ b/requirements.txt
@@ -137,8 +137,9 @@ starlette==0.48.0
 supervision==0.26.1
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
-tensorflow
+tensorflow==2.20.0
 tensorflow-macos==2.15.1
+tensorflow-metal==1.2.0
 termcolor==3.1.0
 threadpoolctl==3.6.0
 tqdm==4.67.1
