--- a/requirements.txt
+++ b/requirements.txt
@@ -138,6 +138,9 @@ supervision==0.26.1
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
 tensorflow==2.20.0
+ultralytics==8.3.0
+torch>=2.0.0
+torchvision>=0.15.0
 # tensorflow-macos==2.15.1
 # tensorflow-metal==1.2.0
 termcolor==3.1.0
