--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,19 @@ data/
 data
 artifacts
 artifacts/
+
+# Model files (too large for GitHub)
+*.h5
+*.weights.h5
+*.pt
+*.pth
+*.onnx
+model_training_artifacts/
+
+# Sensitive files - NEVER commit
+ssh_keys
+*.pem
+*.key
+*_rsa
+*_rsa.pub
+*.ppk
