Fix trained_model_yolo_path to be a directory path instead of file path

--- a/config_params/config.yml
+++ b/config_params/config.yml
@@ -21,7 +21,7 @@ data_transformation:
 model_training:
   root_dir: artifacts/model_training
   trained_model_path: artifacts/model_training/model.h5
-  trained_model_yolo_path: artifacts/model_training/model_yolo.h5
+  trained_model_yolo_path: artifacts/yolo_data
   trained_model_weights: artifacts/model_training/best_weights.weights.h5
   model_name: "ResNet50"
   image_size: [224, 224]
