--- a/precision_agronomist/pyproject.toml
+++ b/precision_agronomist/pyproject.toml
@@ -1,14 +1,15 @@
 [project]
 name = "precision_agronomist"
 version = "0.1.0"
-description = "precision_agronomist using crewAI"
+description = "precision_agronomist using crewAI for plant disease detection"
 authors = [{ name = "Ayush Yajnik", email = "ayushyajnik1@outlook.com" }]
 requires-python = ">=3.10"
 dependencies = [
     "crewai[tools]>=0.203.0,<1.0.0",
-    "scikit-learn>=1.3,<2.0.0",
     "pandas>=2.2.0,<3.0.0",
-    "numpy>=1.26.0,<2.0.0"
+    "numpy>=1.26.0,<2.0.0",
+    "gdown>=4.7.0",
+    "pillow>=10.0.0"
 ]
 
 
